$Id$

2014-04-10  Christian Franke  <franke@computer.org>

	os_win32.cpp: Rework CSMI port scanning.
	Use bPortIdentifier instead of Phy array index for addressing.
	Ignore possibly bogus bNumberOfPhys (ticket #325).

2014-04-09  Douglas Gilbert  <dgilbert@interlog.com>

	scsiprint.cpp:
	- add guard to scsiPrintSasPhy() invocation; resolve ticket #204

2014-04-06  Christian Franke  <franke@computer.org>

	WARNINGS: Remove all entries.  Add link to Warnings page in Wiki.

2014-03-13  Christian Franke  <franke@computer.org>

	drivedb.h:
	- Crucial/Micron RealSSD C300/M500: *SSD1 variant
	- SandForce Driven SSDs: ADATA SP300, ADATA SP800, ADATA SP900 DL2,
	Corsair Force SSD, Kingston SE50S3, Kingston SKC380S3,
	Smart Storage XceedIOPS2, VisionTek GoDrive
	- Indilinx Barefoot 3 based SSDs: OCZ VERTEX 450
	- JMicron based SSDs: ADATA SP600
	- Plextor M3/M5 (Pro) Series SSDs: Rename, add M5S (ticket #297), M5Pro

2014-03-06  Christian Franke  <franke@computer.org>

	drivedb.h:
	- OCZ Intrepid 3000 SSDs
	- Intel 320 Series SSDs: 'D' variant (ticket #315)
	- Intel DC S3500 Series SSDs: 'T' variant (ticket #315)

2014-03-05  Christian Franke  <franke@computer.org>

	ataprint.cpp: Check SCT Feature Control support bit for '-g/-s wcreorder'.
	This prevents bogus error messages if SCT support excludes SCT Feature
	Control command.
	atacmds.cpp: Fix error message text for SCT Feature Control command.

2014-03-03  Christian Franke  <franke@computer.org>

	smartctl.8.in, smartd.8.in, smartd.conf.5.in: Remove bashisms from
	shell script examples.

2014-03-03  Christian Franke  <franke@computer.org>

	Makefile.am, os_win32/smart*_res.rc.in: Set Copyright year in
	Windows VERSIONINFO resource.

2014-03-03  Christian Franke  <franke@computer.org>

	os_linux.cpp: Fix glob(3) max path count (ticket #317).

2014-03-03  Christian Franke  <franke@computer.org>

	configure.ac, Makefile.am: Add '--with-systemdenvfile=[FILE|no]'
	configure option to change or remove (ticket #316) the systemd